Update notification styling slightly The notification panel is now no longer a part of the header, so it has the header box shadow applied to it properly like the user menu. Also the no notifications message now has more spacing and is not using inline styling

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -282,6 +282,11 @@
 		background-size: 60%;
 	    background-position: 50%;
 	}
+	#no-notifs
+	{
+		font-size: 16px;
+		padding: 15px;
+	}
 }
 #users-search
 {
